@@ -23,7 +23,7 @@
     	android:icon="@drawable/icon"
     	android:label="@string/ApplicationName" android:debuggable="true">
     
-        <activity android:name=".ui.activities.ZircoMain"
+        <activity android:name=".ui.activities.MainActivity"
                   android:label="@string/ApplicationName"
                   android:launchMode="singleTask"
                   android:configChanges="keyboardHidden|orientation">
