@@ -1,6 +1,8 @@
 0.4.0:
 - Add "Share" context menu to bookmarks and history view.
 - Feature: Zirco can now retrieve your bookmarks from Firefox Sync. Go to preferences to start using it!
+- Bookmarks and history now use Android stock bookmarks and history database.
+- New design for start page.
 - Remove completed download from download list.
 - Notification for completed downloads are removed when clicking on it.
 
